# dual_ur_hand_teleop

./: README.md  view_robot.rviz
arm_api2/launch/: moveit2_iface.launch.py
arm_api2_msgs/: CMakeLists.txt
arm_api2_py/: README.md  package.xml  setup.cfg  setup.py
arm_api2_py/arm_api2_py/: arm_api2_client.py  transformation_utils.py
arm_api2_py/examples/: arm_api2_client_example.py
arm_api2_py/test/: test_flake8.py  test_pep257.py  test_transformation_utils.py
cv_franka_bridge/cv_franka_bridge/: cv_franka_bridge.py
handcv/handcv/: handcv.py  mediapipehelper.py
handcv/launch/: camera.launch.py
moveit2_ur3e_config/: .setup_assistant  CMakeLists.txt  package.xml
moveit2_ur3e_config/config/: initial_positions.yaml  joint_limits.yaml  left_ur_simulated_config.yaml  moveit_controllers.yaml  right_ur_simulated_config.yaml  ros2_controllers.yaml  ur3e_bot.ros2_control.xacro  ur3e_bot.srdf  ur3e_bot.urdf  ur3e_bot.urdf.xacro
moveit2_ur3e_config/launch/: demo.launch.py  (+8 more)
ur3e_robot_description/: CMakeLists.txt  package.xml
ur3e_robot_description/launch/: display.launch.py
ur3e_robot_description/meshes/table/: Caster_Body_LF.STL  Caster_Body_LR.STL  Caster_Body_RF.STL  Caster_Body_RR.STL  Caster_Wheel_LF.STL  Caster_Wheel_LR.STL  Caster_Wheel_RF.STL  Caster_Wheel_RR.STL  Manipulator_table.STL
ur3e_robot_description/rviz/: ur3e_robot_config.rviz  view_robot.rviz
ur3e_robot_description/urdf/Robotiq_2f_140/: robotiq_2f_140.urdf.xacro
ur3e_robot_description/urdf/table/: table.urdf.xacro
ur3e_robot_description/urdf/ur3e/: robot.urdf.xacro  ur3e.urdf.xacro
(+13 files in other folders)
